syntax = "proto3";

service VideoFrame {
  rpc Send (stream FrameRequest) returns (stream FrameReply) {}
}

message FrameRequest {
  bytes img = 1;
  int32 width=2;
  int32 height=3;
  int32 fps=4;
  bool isColor=5;
}

message FrameReply {
  int32 reply = 1;
}